src/objects/Related_Product__c.object
<CustomObject>
    <description>Jagan 05/04/2017 - Tracks the products related to each Medical Advice Number tied to Germany price list.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>75</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Medical_Advice_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medical Advice Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Schedule_Medical_Advice_Number</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipName>Product_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Schedule_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Period__c</fullName>
        <label>Valid Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>12 Months</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>7 Days</fullName>
                </value>
                <value>
                    <fullName>10 Months</fullName>
                </value>
                <value>
                    <fullName>11 Months</fullName>
                </value>
                <value>
                    <fullName>14 Days</fullName>
                </value>
                <value>
                    <fullName>21 Days</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
                <value>
                    <fullName>5 Months</fullName>
                </value>
                <value>
                    <fullName>7 Months</fullName>
                </value>
                <value>
                    <fullName>8 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>13 Months</fullName>
                </value>
                <value>
                    <fullName>14 Months</fullName>
                </value>
                <value>
                    <fullName>15 Months</fullName>
                </value>
                <value>
                    <fullName>16 Months</fullName>
                </value>
                <value>
                    <fullName>17 Months</fullName>
                </value>
                <value>
                    <fullName>18 Months</fullName>
                </value>
                <value>
                    <fullName>19 Months</fullName>
                </value>
                <value>
                    <fullName>20 Months</fullName>
                </value>
                <value>
                    <fullName>21 Months</fullName>
                </value>
                <value>
                    <fullName>22 Months</fullName>
                </value>
                <value>
                    <fullName>23 Months</fullName>
                </value>
                <value>
                    <fullName>24 Months</fullName>
                </value>
                <value>
                    <fullName>10 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Product</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>